--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<!-- this is a comment -->
 <head>
   <title> Katherine Newport-Forbes</title>
   <meta name="description" content="profile STEM education full-stack development game design">
