make my profile prettier

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- this is a comment -->
 <head>
   <title> Katherine Newport-Forbes</title>
-  <meta name="description" content="profile STEM education full-stack development game design">
+  <meta name="description" content="My profile page">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
